# bazel-genheader

./: .gitignore  BUILD.bazel
src/: genheader.h.in  main.c  normalheader.h
