genrule(
    name = "gen_sh",
    outs = ["gen.sh"],
    cmd = """
cat > $@ << "EOF"
#! /bin/sh
sed -e 's#@TO_BE_GENERATED@#(10 + NORMAL_CONST)#g' \
    -e 's#normalheader.h#src/normalheader.h#'
EOF""",
)

genrule(
    name = "genheader_h",
    srcs = [ "src/genheader.h.in" ],
    outs = [ "genheader.h" ],
    cmd = "$(location :gen_sh) < $(<) > $(@)",
    tools = [ ":gen_sh" ],
)

cc_binary(
    name = "main",
    srcs = glob(["src/*.c", "src/*.h"]) + [ "genheader.h" ],
)
